@@ -1,3 +1,8 @@
+(14/08/14)
+==========
+
+· Added Emulators > UAE4ALL 0.3 RC4 
+
 (13/08/14)
 ==========
 
